--- a/hex.html
+++ b/hex.html
@@ -19,7 +19,7 @@
         </div>
       </nav>
 
-      
+
       <main>
         <div class="container">
           <h2>background color : <span class="color">#f1f5f8</span></h2>
@@ -30,6 +30,6 @@
 
 
 
-    <script src="app.js"></script>
+    <script src="hex.js"></script>
 </body>
 </html>
